# aiontfy

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  renovate.json  test.ipynb
.github/: labels.yml  release-drafter.yml
.github/workflows/: build.yml  draft.yml  labeler.yml
docs/: LICENSE.md
docs/reference/: aiontfy.md
src/aiontfy/: __init__.py  const.py  exceptions.py  ntfy.py  types.py  update.py
tests/: __init__.py  conftest.py  test_account.py  test_clear.py  test_delete.py  test_generate_token.py  test_publish.py  test_reservation.py  test_stats.py  test_subscribe.py
tests/fixtures/: account.json  account_anonymous.json  token.json
